--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Kudos by CargoTrack - Sistem de management al feedback-ului pentru angajați" />
-  <title>Kudos by CargoTrack</title>
+  <meta name="description" content="Kudos Feedback & Growth - Sistem de management al feedback-ului pentru angajați" />
+  <title>KUDOS – Feedback & Growth</title>
 </head>
 
 <body>
